fix pod log
